--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -6,16 +6,16 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>      
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Trekbase</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right" ng-if="user.uid">
-                <li><a href="#!/items/list">All Items</a></li>
-                <li><a href="#!/items/new">New Items</a></li>
+                <li><a href="#!/list">Parks</a></li>
+                <li><a href="#!/campsite_view">Campsites</a></li>
                 <li><a href="#!/logout">Logout</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" ng-if="!user.uid">
