--- a/partials/park-list-view.html
+++ b/partials/park-list-view.html
@@ -1,2 +1,13 @@
 <h3>Park List</h3>
-<div><a ng-href="#!/park_view"><p>Parks List Goes Here</p></a></div>
+<div>
+    <a ng-href="#!/park_view">
+        <p>Parks List Goes Here</p>
+    </a>
+</div>
+<div ng-repeat="park in allParks">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {{park.name}}
+        </div>
+    </div>
+</div>
