Single  Park View is functional

--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,2 +1,2 @@
-<h3>Park View!</h3>
-<div><a ng-href="#!/campsite_view">This is a campsite link</p></div>
+<h3>{{park.name}}</h3>
+<div><a ng-href="#!/campsite_view">This is a campsite link</a></div>
