parkCRUD complete and setup Campsite Factory

--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,2 +1,12 @@
 <h3>{{park.name}}</h3>
 <div><a ng-href="#!/campsite_view">This is a campsite link</a></div>
+<div ng-repeat="campsite in campsites">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <!-- <a ng-href="#!/park_view/{{park.parkId}}">{{park.name}}</a>
+            <a ng-click="deletePark(park.parkId)"> -->
+                <button>Delete Campsite</button>
+            <!-- </a> -->
+        </div>
+    </div>
+</div>
