Added getCampsites functionality to Park View & updated seed default city/state on parks' did not match any files

--- a/partials/park-list-view.html
+++ b/partials/park-list-view.html
@@ -40,6 +40,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <a ng-href="#!/park_view/{{park.parkId}}">{{park.name}}</a>
+            <p>{{park.city}}, {{park.state}}</p>
             <a ng-click="deletePark(park.parkId)">
                 <button>Delete Park</button>
             </a>
