--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -1,1 +1,17 @@
-<div><p>Campsite View</p></div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h1>{{campsite.campsiteName}}</h1>
+        <h4>{{park.name}} - {{park.city}}, {{park.state}}</h4>
+    </div>
+    <div class="panel-body">
+        <p>Area: {{campsite.area}}</p>
+        <p>Type: {{campsite.type}}</p>
+        <p>Features: {{campsite.features}}</p>
+        <p>Fee: {{campsite.fee}}</p>
+        <p>Bathrooms: {{campsite.bathrooms}}</p>
+        <p>Latitude: {{campsite.latitude}}</p>
+        <p>Longitude: {{campsite.longitude}}</p>
+        <p>Review: {{campsite.review}}</p>
+        <!-- <p>{{campsite.image}}</p> -->
+    </div>
+</div>
