--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -13,5 +13,8 @@
         <p>Longitude: {{campsite.longitude}}</p>
         <p>Review: {{campsite.review}}</p>
         <!-- <p>{{campsite.image}}</p> -->
+        <a ng-click="deleteCampsite(campsite.campsiteId)">
+            <button>Delete Campsite</button>
+        </a>
     </div>
 </div>
