--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -16,5 +16,53 @@
         <a ng-click="deleteCampsite(campsite.campsiteId)">
             <button>Delete Campsite</button>
         </a>
+        <!-- <a ng-click="">
+            <button>Edit Campsite</button>
+        </a> -->
     </div>
+</div>
+<div class="edit-campsite">
+    <form class="form-group">
+        <div class="">
+            <label>Campsite Name</label>
+            <input type="text" class="form-control" placeholder="Campsite Name" ng-model="editedCampsite.campsiteName" ng-required="required" />
+        </div>
+        <div class="Area">
+            <label>Area</label>
+            <input type="text" class="form-control" placeholder="Area" ng-model="editedCampsite.area" ng-required="required" />
+        </div>
+        <div class="">
+            <label>Type</label>
+            <input type="text" class="form-control" placeholder="Type" ng-model="editedCampsite.type" />
+        </div>
+        <div class="">
+            <label>Latitude</label>
+            <input type="text" class="form-control" placeholder="Latitude" ng-model="editedCampsite.latitude" />
+        </div>
+        <div class="">
+            <label>Longitude</label>
+            <input type="text" class="form-control" placeholder="Longitude" ng-model="editedCampsite.longitude" />
+        </div>
+        <div class="">
+            <label>Fee</label>
+            <input type="text" class="form-control" placeholder="Fee" ng-model="editedCampsite.fee" />
+        </div>
+        <div class="">
+            <label>Bathrooms</label>
+            <input type="text" class="form-control" placeholder="Bathrooms" ng-model="editedCampsite.bathrooms" />
+        </div>
+        <div class="">
+            <label>Features</label>
+            <input type="text" class="form-control" placeholder="Features" ng-model="editedCampsite.features" />
+        </div>
+        <div class="form-group">
+            <label for="exampleInputFile">Image</label>
+            <input type="file" id="exampleInputFile" ng-model="editedCampsite.image">
+        </div>
+        <div class="">
+            <label>Review</label>
+            <input type="text" class="form-control" placeholder="Write a review" ng-model="editedCampsite.review" />
+        </div>
+        <button class="btn btn-default" ng-click="editCampsite()">Submit</button>
+    </form>
 </div>
