Added GoogleMaps functionality to campsite view

--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -13,6 +13,8 @@
         <p>Longitude: {{campsite.longitude}}</p>
         <p>Review: {{campsite.review}}</p>
         <!-- <p>{{campsite.image}}</p> -->
+        <div id="map"></div>
+        
         <a ng-click="deleteCampsite(campsite.campsiteId)">
             <button>Delete Campsite</button>
         </a>
