--- a/partials/home-view.html
+++ b/partials/home-view.html
@@ -1,3 +1,4 @@
-<h1>Home</h1>
-<a ng-href="#!/list">Parks</a>
-<a ng-href="#!/search">Search</a>
+<div class="bgr-box-primary">
+    <a ng-href="#!/list">Parks</a>
+    <a ng-href="#!/search">Search</a>
+</div>
