--- a/partials/park-list-view.html
+++ b/partials/park-list-view.html
@@ -1,45 +1,53 @@
-<h3>Park List</h3>
-<div>
-    <button ng-click="addingPark = true;" ng-show="!addingPark">+ Add Park</button>
-    <button ng-click="addingPark = false;" ng-show="addingPark">Close</button>
-    <div class="add-park" ng-show="addingPark">
-        <form class="form-group">
-            <div class="">
-                <label>Park Name</label>
-                <input type="text" class="form-control" placeholder="Name" ng-model="newPark.name" ng-required="required" />
+<div class="bgr-box-primary container">
+    <div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-10">
+                <button class="btn btn-default btn-accent" ng-click="addingPark = true;" ng-show="!addingPark">+ Add Park <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
+                <button class="btn btn-default btn-accent" ng-click="addingPark = false;" ng-show="addingPark">Close</button>
             </div>
-            <div class="">
-                <label>City/Town</label>
-                <input type="text" class="form-control" placeholder="City/Town" ng-model="newPark.city" ng-required="required" />
-            </div>
-            <div class="">
-                <label>State</label>
-                <input type="text" class="form-control" placeholder="State" ng-model="newPark.state" />
-            </div>
-            <div class="">
-                <label>Latitude</label>
-                <input type="text" class="form-control" placeholder="Latitude" ng-model="newPark.latitude" />
-            </div>
-            <div class="">
-                <label>Longitude</label>
-                <input type="text" class="form-control" placeholder="Longitude" ng-model="newPark.longitude" />
-            </div>
-            <div class="form-group">
-                <label for="exampleInputFile">Image</label>
-                <input type="file" id="exampleInputFile" ng-model="newPark.image">
-            </div>
-            <button class="btn btn-default" ng-click="addingPark = false; addNewPark()">Submit</button>
-        </form>
-    </div>
-</div>
-<div ng-repeat="park in allParks">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <a ng-href="#!/park_view/{{park.parkId}}">{{park.name}}</a>
-            <p>{{park.city}}, {{park.state}}</p>
-            <a ng-click="deletePark(park.parkId)">
-                <button>Delete Park</button>
-            </a>
+        </div>
+        <div class="add-park" ng-show="addingPark">
+            <form class="form-group">
+                <div class="">
+                    <label>Park Name</label>
+                    <input type="text" class="form-control" placeholder="Name" ng-model="newPark.name" ng-required="required" />
+                </div>
+                <div class="">
+                    <label>City/Town</label>
+                    <input type="text" class="form-control" placeholder="City/Town" ng-model="newPark.city" ng-required="required" />
+                </div>
+                <div class="">
+                    <label>State</label>
+                    <input type="text" class="form-control" placeholder="State" ng-model="newPark.state" />
+                </div>
+                <div class="">
+                    <label>Latitude</label>
+                    <input type="text" class="form-control" placeholder="Latitude" ng-model="newPark.latitude" />
+                </div>
+                <div class="">
+                    <label>Longitude</label>
+                    <input type="text" class="form-control" placeholder="Longitude" ng-model="newPark.longitude" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputFile">Image</label>
+                    <input type="file" id="exampleInputFile" ng-model="newPark.image">
+                </div>
+                <button class="btn btn-default" ng-click="addingPark = false; addNewPark()">Submit</button>
+            </form>
         </div>
     </div>
+    <div ng-repeat="park in allParks" ng-show="!addingPark">
+        <div class="col-md-4">
+            <div class="panel panel-default park_list--park_card">
+                <div class="panel-body">
+                    <a ng-href="#!/park_view/{{park.parkId}}">{{park.name}}</a>
+                    <p>{{park.city}}, {{park.state}}</p>
+                    <a ng-click="deletePark(park.parkId)">
+                        <button>Delete Park</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- hi-->
 </div>
