--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,61 +1,63 @@
-<h3>{{park.name}}</h3>
-<p>{{park.city}}, {{park.state}}</p>
-<div id="map"></div>
-<button class="btn btn-default" ng-click="addingCampsite = true;" ng-hide="addingCampsite">Add Campsite</button>
-<button class="btn btn-default" ng-click="addingCampsite = false;" ng-show="addingCampsite">Close</button>
-<div class="add-campsite" ng-show="addingCampsite">
-    <form class="form-group">
-        <div class="">
-            <label>Campsite Name</label>
-            <input type="text" class="form-control" placeholder="Campsite Name" ng-model="newCampsite.campsiteName" ng-required="required" />
-        </div>
-        <div class="Area">
-            <label>Area</label>
-            <input type="text" class="form-control" placeholder="Area" ng-model="newCampsite.area" ng-required="required" />
-        </div>
-        <div class="">
-            <label>Type</label>
-            <input type="text" class="form-control" placeholder="Type" ng-model="newCampsite.type" />
-        </div>
-        <div class="">
-            <label>Latitude</label>
-            <input type="text" class="form-control" placeholder="Latitude" ng-model="newCampsite.latitude" />
-        </div>
-        <div class="">
-            <label>Longitude</label>
-            <input type="text" class="form-control" placeholder="Longitude" ng-model="newCampsite.longitude" />
-        </div>
-        <div class="">
-            <label>Fee</label>
-            <input type="text" class="form-control" placeholder="Fee" ng-model="newCampsite.fee" />
-        </div>
-        <div class="">
-            <label>Bathrooms</label>
-            <input type="text" class="form-control" placeholder="Bathrooms" ng-model="newCampsite.bathrooms" />
-        </div>
-        <div class="">
-            <label>Features</label>
-            <input type="text" class="form-control" placeholder="Features" ng-model="newCampsite.features" />
-        </div>
-        <div class="form-group">
-            <label for="file">Image</label>
-            <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
-            <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
-        </div>
-        <div class="">
-            <label>Review</label>
-            <input type="text" class="form-control" placeholder="Write a review" ng-model="newCampsite.review" />
-        </div>
-        <button class="btn btn-default" ng-click="addingCampsite = false; createNewCampsite()">Save</button>
-    </form>
-</div>
-<div ng-repeat="campsite in campsites">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <a ng-href="#!/campsite_view/{{campsite.campsiteId}}">{{campsite.campsiteName}}</a>
-            <!-- <a ng-click="deleteCampsite(campsite.campsiteId)">
+<div class="bgr-box-primary container">
+    <h3>{{park.name}}</h3>
+    <p>{{park.city}}, {{park.state}}</p>
+    <!-- <div id="map"></div> -->
+    <button class="btn btn-default btn-accent" ng-click="addingCampsite = true;" ng-hide="addingCampsite">Add Campsite <span class="glyphicon glyphicon-tent" aria-hidden="true"></span></button>
+    <button class="btn btn-default btn-accent" ng-click="addingCampsite = false;" ng-show="addingCampsite">Close</button>
+    <div class="add-campsite" ng-show="addingCampsite">
+        <form class="form-group">
+            <div class="">
+                <label>Campsite Name</label>
+                <input type="text" class="form-control" placeholder="Campsite Name" ng-model="newCampsite.campsiteName" ng-required="required" />
+            </div>
+            <div class="Area">
+                <label>Area</label>
+                <input type="text" class="form-control" placeholder="Area" ng-model="newCampsite.area" ng-required="required" />
+            </div>
+            <div class="">
+                <label>Type</label>
+                <input type="text" class="form-control" placeholder="Type" ng-model="newCampsite.type" />
+            </div>
+            <div class="">
+                <label>Latitude</label>
+                <input type="text" class="form-control" placeholder="Latitude" ng-model="newCampsite.latitude" />
+            </div>
+            <div class="">
+                <label>Longitude</label>
+                <input type="text" class="form-control" placeholder="Longitude" ng-model="newCampsite.longitude" />
+            </div>
+            <div class="">
+                <label>Fee</label>
+                <input type="text" class="form-control" placeholder="Fee" ng-model="newCampsite.fee" />
+            </div>
+            <div class="">
+                <label>Bathrooms</label>
+                <input type="text" class="form-control" placeholder="Bathrooms" ng-model="newCampsite.bathrooms" />
+            </div>
+            <div class="">
+                <label>Features</label>
+                <input type="text" class="form-control" placeholder="Features" ng-model="newCampsite.features" />
+            </div>
+            <div class="form-group">
+                <label for="file">Image</label>
+                <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
+                <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
+            </div>
+            <div class="">
+                <label>Review</label>
+                <input type="text" class="form-control" placeholder="Write a review" ng-model="newCampsite.review" />
+            </div>
+            <button class="btn btn-default" ng-click="addingCampsite = false; createNewCampsite()">Save</button>
+        </form>
+    </div>
+    <div ng-repeat="campsite in campsites">
+        <div class="col-md-4 panel panel-default park_view--campsite-card">
+            <div class="panel-body">
+                <a ng-href="#!/campsite_view/{{campsite.campsiteId}}">{{campsite.campsiteName}}</a>
+                <!-- <a ng-click="deleteCampsite(campsite.campsiteId)">
                 <button>Delete Campsite</button>
             </a> -->
+            </div>
         </div>
     </div>
 </div>
