--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,38 @@
-#map {
-  height: 300px;
-  width: 400px; }
+nav {
+  height: 100px;
+  margin-bottom: 0; }
+
+.navbar {
+  margin-bottom: 0;
+  border: none;
+  border-radius: 0; }
+
+.bgr-box-primary {
+  background-color: #1F445F;
+  height: 100vh;
+  width: 100%;
+  margin: 0; }
+
+.btn-accent {
+  background-color: #FFB81C;
+  border: none; }
+
+.park_view--campsite-card {
+  background-color: #272020;
+  border: none; }
+  .park_view--campsite-card p {
+    color: white; }
+
+.park_list--park_card {
+  background-color: #312F2F;
+  border: none; }
+  .park_list--park_card p {
+    color: white; }
 
 .uploadedImage {
   height: 140px;
   width: auto; }
+
+#map {
+  height: 300px;
+  width: 400px; }
