--- a/partials/home-view.html
+++ b/partials/home-view.html
@@ -1,4 +1,11 @@
-<div class="bgr-box-primary">
-    <a ng-href="#!/list">Parks</a>
-    <a ng-href="#!/search">Search</a>
+<div class="divider"></div>
+<div class="bgr-box-home">
+    <div class="container home-container">
+        <div class="col-md-6 home_container-boxes park-box">
+            <a ng-href="#!/list">Parks</a>
+        </div>
+        <div class="col-md-6 home_container-boxes campsite-box">
+            <a ng-href="#!/search">Search</a>
+        </div>
+    </div>
 </div>
