--- a/partials/login-view.html
+++ b/partials/login-view.html
@@ -1,13 +1,13 @@
-<div class="container bgr-box-primary col-xs-4 col-xs-offset-4">
-    <div class="col-md-6">
+<div class="container bgr-box-primary home-container col-xs-4 col-xs-offset-4">
+    <div class="col-md-6 login-box_left home_container-boxes">
         <input type="email" class="form-control form-spacing" placeholder="Email Address" ng-model="auth.email" required autofocus>
         <input type="password" class="form-control form-spacing" placeholder="Password" ng-model="auth.password" required>
         <input type="text" class="form-control form-spacing" placeholder="Username" ng-model="auth.username" required>
-        <a class="btn btn-lg btn-success col-xs-6" ng-click="loginUser()">Login</a>
-        <a class="btn btn-lg btn-primary col-xs-6" ng-click="registerUser()">Register</a>
+        <a class="btn btn-lg btn-secondary col-xs-6" ng-click="loginUser()">Login</a>
+        <a class="btn btn-lg btn-secondary col-xs-6" ng-click="registerUser()">Register</a>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6 login-box_right home_container-boxes">
        <p>Content Area</p>
     </div>
 </div>
