--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "colors";
 nav {
-    height: 100px;
+    //height: 100px;
     margin-bottom: 0;
 }
 
@@ -170,9 +170,31 @@ nav {
     }
 }
 
+.bottom-box img {
+    height: 100%;
+    width: 100%;
+    margin: 5px;
+}
+
+.input-box input {
+    max-width: 300px;
+}
+
 .uploadedImage {
     height: 140px;
     width: auto;
+}
+
+.no-space {
+    max-width: 350px;
+    padding: 0;
+}
+
+.nav-test {
+    height: 300px;
+    // color: red;
+    // text-transform: uppercase;
+    // text-decoration: underline;
 }
 
 #map {
