--- a/partials/login-view.html
+++ b/partials/login-view.html
@@ -3,11 +3,10 @@
         <input type="email" class="form-control form-spacing" placeholder="Email Address" ng-model="auth.email" required autofocus>
         <input type="password" class="form-control form-spacing" placeholder="Password" ng-model="auth.password" required>
         <input type="text" class="form-control form-spacing" placeholder="Username" ng-model="auth.username" required>
-        <a class="btn btn-lg btn-secondary col-xs-6" ng-click="loginUser()">Login</a>
-        <a class="btn btn-lg btn-secondary col-xs-6" ng-click="registerUser()">Register</a>
+        <a class="btn btn-lg btn-secondary col-md-6" ng-click="loginUser()">Login</a>
+        <a class="btn btn-lg btn-secondary col-md-6" ng-click="registerUser()">Register</a>
     </div>
-
     <div class="col-md-6 login-box_right home_container-boxes">
-       <p>Content Area</p>
+        <p>Content Area</p>
     </div>
 </div>
