--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -1,8 +1,17 @@
 <div class="bgr-box-primary container">
     <h3>{{park.name}}</h3>
     <p>{{park.city}}, {{park.state}}</p>
+    <a ng-click="makeEdit(park)">
+        <button class="btn btn-default btn-accent">Edit Park <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
+    </a>
     <!-- <div id="map"></div> -->
-    <button class="btn btn-default btn-accent" ng-click="addingCampsite = true;" ng-hide="addingCampsite">Add Campsite <span class="glyphicon glyphicon-tent" aria-hidden="true"></span></button>
+    <!-- <div class="row">
+        <div class="col-md-2 col-md-offset-10">
+            <button class="btn btn-default btn-accent btn-right pull-right" ng-click="addingPark = true;" ng-show="!addingPark">+ Add Campsite <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
+            <button class="btn btn-default btn-accent" ng-click="addingPark = false;" ng-show="addingPark">Close</button>
+        </div>
+    </div> -->
+    <button class="btn btn-default btn-accent pull-right" ng-click="addingCampsite = true;" ng-hide="addingCampsite">Add Campsite <span class="glyphicon glyphicon-tent" aria-hidden="true"></span></button>
     <button class="btn btn-default btn-accent" ng-click="addingCampsite = false;" ng-show="addingCampsite">Close</button>
     <div class="add-campsite" ng-show="addingCampsite">
         <form class="form-group">
@@ -54,10 +63,36 @@
         <div class="col-md-4 panel panel-default park_view--campsite-card">
             <div class="panel-body">
                 <a ng-href="#!/campsite_view/{{campsite.campsiteId}}">{{campsite.campsiteName}}</a>
-                <!-- <a ng-click="deleteCampsite(campsite.campsiteId)">
-                <button>Delete Campsite</button>
-            </a> -->
             </div>
         </div>
+    </div>
+    <div class="add-park" ng-hide="editing">
+        <form class="form-group">
+            <div class="">
+                <label>Park Name</label>
+                <input type="text" class="form-control" placeholder="Name" ng-model="editedPark.name" ng-required="required" />
+            </div>
+            <div class="">
+                <label>City/Town</label>
+                <input type="text" class="form-control" placeholder="City/Town" ng-model="editedPark.city" ng-required="required" />
+            </div>
+            <div class="">
+                <label>State</label>
+                <input type="text" class="form-control" placeholder="State" ng-model="editedPark.state" />
+            </div>
+            <div class="">
+                <label>Latitude</label>
+                <input type="text" class="form-control" placeholder="Latitude" ng-model="editedPark.latitude" />
+            </div>
+            <div class="">
+                <label>Longitude</label>
+                <input type="text" class="form-control" placeholder="Longitude" ng-model="editedPark.longitude" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputFile">Image</label>
+                <input type="file" id="exampleInputFile" ng-model="editedPark.image">
+            </div>
+            <button class="btn btn-default" ng-click="editing = false; editPark(park)">Submit</button>
+        </form>
     </div>
 </div>
