Added back editPark functionality

--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -92,7 +92,7 @@
                 <label for="exampleInputFile">Image</label>
                 <input type="file" id="exampleInputFile" ng-model="editedPark.image">
             </div>
-            <button class="btn btn-default" ng-click="editing = false; editPark(park)">Submit</button>
+            <button class="btn btn-default" ng-click="editing = false; editPark()">Submit</button>
         </form>
     </div>
 </div>
