Fixed margins on campsite cards

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -9,14 +9,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="#">Trek</a>
+                <a class="navbar-brand logo nav-item" href="#">Trek</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navlist navbar-nav navbar-right" ng-if="user.uid">
-                    <li><a href="#!/list">Parks</a></li>
-                    <li><a href="#!/campsite_view">Campsites</a></li>
-                    <li><a href="#!/logout">Logout</a></li>
+                    <li ><a class="nav-item" href="#!/list">Parks</a></li>
+                    <li ><a class="nav-item" href="#!/campsite_view">Campsites</a></li>
+                    <li ><a class="nav-item" href="#!/logout">Logout</a></li>
                 </ul>
                 <!-- <ul class="nav navbar-nav navbar-right" ng-if="!user.uid">
                     <li><a href="#!/auth">Authenticate</a></li>
