--- a/partials/park-list-view.html
+++ b/partials/park-list-view.html
@@ -45,9 +45,9 @@
                     <a ng-click="deletePark(park.parkId)">
                         <button>Delete Park</button>
                     </a>
-                    <a ng-click="editing = true">
+                    <!-- <a ng-click="editing = true">
                         <button>Edit Park</button>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
