--- a/styles/main.css
+++ b/styles/main.css
@@ -104,6 +104,12 @@ nav {
 .park-title-box p {
   color: white !important; }
 
+.park-buttons {
+  margin: 5px 0px; }
+
+.park-title-box, .park-buttons {
+  margin: 0px 20px; }
+
 .park_view--campsite-card {
   background-color: #272020;
   border: none;
