--- a/partials/park-view.html
+++ b/partials/park-view.html
@@ -3,19 +3,24 @@
         <h3>{{park.name}}</h3>
         <p>{{park.city}}, {{park.state}}</p>
     </div>
-    <a ng-click="editing=true;makeEdit(park)">
-        <button class="btn btn-default btn-accent pull-right">Edit Park <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
-    </a>
-    <!-- <img class="uploadedImage" src="data:{{campsite.image.filetype}};base64,{{campsite.image.base64code}}"> -->
-    <!-- <div id="map"></div> -->
-    <!-- <div class="row">
+    <div class="park-buttons">
+        <a ng-click="editing=true;makeEdit(park)" ng-hide="editing">
+            <button class="btn btn-default btn-accent">Edit Park <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
+        </a>
+        <a ng-click="editing=false" ng-show="editing">
+            <button class="btn btn-default btn-accent">Close</button>
+        </a>
+        <!-- <img class="uploadedImage" src="data:{{campsite.image.filetype}};base64,{{campsite.image.base64code}}"> -->
+        <!-- <div id="map"></div> -->
+        <!-- <div class="row">
         <div class="col-md-2 col-md-offset-10">
             <button class="btn btn-default btn-accent btn-right pull-right" ng-click="addingPark = true;" ng-show="!addingPark">+ Add Campsite <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span></button>
             <button class="btn btn-default btn-accent" ng-click="addingPark = false;" ng-show="addingPark">Close</button>
-        </div>
+        </div>  
     </div> -->
-    <button class="btn btn-default btn-accent pull-right" ng-click="addingCampsite = true;" ng-hide="addingCampsite">Add Campsite <span class="glyphicon glyphicon-tent" aria-hidden="true"></span></button>
-    <button class="btn btn-default btn-accent" ng-click="addingCampsite = false;" ng-show="addingCampsite">Close</button>
+        <button class="btn btn-default btn-accent pull-right" ng-click="addingCampsite = true;" ng-hide="addingCampsite; editing">Add Campsite <span class="glyphicon glyphicon-tent" aria-hidden="true"></span></button>
+        <button class="btn btn-default btn-accent" ng-click="addingCampsite = false;" ng-show="addingCampsite">Close</button>
+    </div>
     <div class="add-campsite" ng-show="addingCampsite">
         <form class="form-group">
             <div class="">
@@ -62,7 +67,7 @@
             <button class="btn btn-default" ng-click="addingCampsite = false; createNewCampsite()">Save</button>
         </form>
     </div>
-    <div class="campsites-box">
+    <div class="campsites-box" ng-hide="editing">
         <div ng-repeat="campsite in campsites">
             <div class="col-md-4">
                 <div class="panel panel-default park_view--campsite-card">
@@ -94,7 +99,7 @@
             <div class="">
                 <label>Longitude</label>
                 <input type="text" class="form-control" placeholder="Longitude" ng-model="editedPark.longitude" />
-            </div>
+            </div>   
             <div class="form-group">
                 <label for="exampleInputFile">Image</label>
                 <input type="file" id="exampleInputFile" ng-model="editedPark.image">
