--- a/sass/main.scss
+++ b/sass/main.scss
@@ -112,6 +112,7 @@ nav {
     width: 100%;
     margin: 0;
     padding-top: 2%;
+    overflow: auto;
 }
 
 .bgr-box-home {
@@ -119,6 +120,7 @@ nav {
     height: 100vh;
     width: 100%;
     margin: 0;
+    overflow: auto;
     a,
     a:hover {
         color: white;
@@ -169,8 +171,19 @@ nav {
     background-color: #272020;
     border: none;
     margin: 3px;
+    height: 300px;
+    overflow: hidden;
+    text-align: center;
+    a {
+        z-index: 2;
+        padding: 10px 30px;
+        height: 50px;
+    }
     p {
         color: white;
+    }
+    div{
+        padding: 0;
     }
 }
 
@@ -215,6 +228,10 @@ nav {
 .uploadedImage {
     height: 140px;
     width: auto;
+}
+
+.campsite-bgr{
+    height: 300px;
 }
 
 .no-space {
