--- a/styles/main.css
+++ b/styles/main.css
@@ -70,13 +70,15 @@ nav {
   height: 100vh;
   width: 100%;
   margin: 0;
-  padding-top: 2%; }
+  padding-top: 2%;
+  overflow: auto; }
 
 .bgr-box-home {
   background-color: #1F445F;
   height: 100vh;
   width: 100%;
-  margin: 0; }
+  margin: 0;
+  overflow: auto; }
   .bgr-box-home a,
   .bgr-box-home a:hover {
     color: white;
@@ -113,9 +115,18 @@ nav {
 .park_view--campsite-card {
   background-color: #272020;
   border: none;
-  margin: 3px; }
+  margin: 3px;
+  height: 300px;
+  overflow: hidden;
+  text-align: center; }
+  .park_view--campsite-card a {
+    z-index: 2;
+    padding: 10px 30px;
+    height: 50px; }
   .park_view--campsite-card p {
     color: white; }
+  .park_view--campsite-card div {
+    padding: 0; }
 
 .park_list--park_card {
   background-color: #312F2F;
@@ -150,6 +161,9 @@ nav {
 .uploadedImage {
   height: 140px;
   width: auto; }
+
+.campsite-bgr {
+  height: 300px; }
 
 .no-space {
   max-width: 350px;
