--- a/sass/main.scss
+++ b/sass/main.scss
@@ -207,6 +207,7 @@ nav {
 .campsite-view_main-box {
     color: white;
     background-color: $secondary;
+    height: 80vh;
     .review-box {
         padding: 15px;
     }
